tests/cases/fail/list_arg_must_be_variable.p4
def consume(xs: list[int]) -> int:
    return list_len(xs)

def main() -> None:
    print(consume(list_int()))
